--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -19,7 +19,7 @@ header{
     line-height: 10px;
 }
 
-li{
+li {
     display: inline-block;
     margin: 20px;
 }
@@ -30,7 +30,7 @@ a{
 
 a:hover{
     color: blueviolet;
-    transition: 0.4s all;
+    
 }
 
 #inscreva-se-btn{
@@ -108,3 +108,59 @@ form [type="submit"]{
 
  
 
+
+
+
+
+
+
+
+
+
+li{
+    color: black;
+    font-size: 20px;
+    display: inline-block;
+    margin: 15px;
+}
+
+ul {
+    margin-top: 35px;
+}
+
+#line-logo-vert {
+    margin-left: 15px;
+    margin-top: 20px;
+    height: 50px;
+    border-right: 2px solid rgb(0, 0, 0);
+}
+
+#line-1 {
+    margin-top: 20px;
+    height: 50px;
+    border-right: 2px solid rgb(0, 0, 0);
+}
+
+#line-1 {
+    mask-position: 0cm;
+    border-right: 2px solid rgb(0, 0, 0);
+}
+
+h1 {
+    font-size: 20px;
+    margin-top: 35px;
+    margin-left: 10px;
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+img {
+    margin-top: 25px;
+    margin-left: 70px;
+    width: 150px;
+}
